# semantic-search-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: design.md
docs/plans/: 2025-12-28-semantic-code-search-mcp.md
src/code_rag/: config.py  database.py  embedder.py  indexer.py  searcher.py  server.py  watcher.py
src/semantic_search_mcp/: cli.py  config.py  database.py  embedder.py  indexer.py  server.py  watcher.py
tests/: __init__.py  test_chunker.py  test_config.py  test_database.py  test_embedder.py  test_gitignore.py  test_indexer.py  test_integration.py  test_searcher.py  test_server.py  test_watcher.py
