[project]
name = "code-rag"
version = "0.1.0"
description = "MCP semantic code search server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.6",
    "apsw>=3.45.0",
    "watchfiles>=1.0.0",
    "pathspec>=0.12.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
code-rag = "code_rag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
